--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,24 @@
               body { 
                      
                      font: 13px Helvetica, Arial; 
-                     background-image: url(/img/run.jpg);
+                     
                      background-color: beige;
+                     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+                     
                      
               
               }
@@ -61,6 +77,7 @@
               .encabezado{
                      background-color:rgb(255, 191, 128);
                      background-image: url(img/run.jpg);
+                     
               }
 
               
@@ -87,7 +104,7 @@
        <script src="../../socket.io/socket.io.js"></script>
        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
        <script>
-              let  socket = io.connect('http:/localhost4000');
+              let  socket = io.connect('http:/localhost:4000');
 
 //send/receive without reload
 $('form').submit( e => {
